--- a/game task/game.html
+++ b/game task/game.html
@@ -12,6 +12,13 @@
         <div id="wrapper">
                 <div id="target"></div>
                 <div id="ship"></div>
+                <div id="stats">
+                  <p id="bulletLabel">Bullets:</p>
+                  <p id="bulletsDigits">10</p>
+                  <p id="pointsLabel">Points:</p>
+                  <p id="points">0</p>
+                </div>
+
         </div>
 </body>
 </html>
