play mute btn and sliders added

--- a/audio player/player.html
+++ b/audio player/player.html
@@ -9,6 +9,15 @@
    <script src="player.js" type="text/javascript"></script>
 </head>
 <body>
+   <div id="music-player">
+      <button id="playpausebtn"></button>
+      <input id="seekslider" type="range" min="0" max="100" value="0" step="1">
+      <div id="timebox">
+         <span id="curtimetext">00:00</span> / <span id="durtimetext">00:00</span>
+      </div>
+      <button id="mutebtn"></button>
+      <input id="volumeslider" type="range" min="0" max="100" value="100" step="1">
 
+   </div>
 </body>
 </html>
