--- a/audio player/player.html
+++ b/audio player/player.html
@@ -9,15 +9,46 @@
    <script src="player.js" type="text/javascript"></script>
 </head>
 <body>
-   <div id="music-player">
-      <button id="playpausebtn"></button>
-      <input id="seekslider" type="range" min="0" max="100" value="0" step="1">
-      <div id="timebox">
-         <span id="curtimetext">00:00</span> / <span id="durtimetext">00:00</span>
+   <div id="wrapper">
+      <div id="music-player">
+         <div id="audio-wrapper">
+            <button id="playpausebtn"></button>
+            <input id="seekslider" type="range" min="0" max="100" value="0" step="1">
+            <div id="timebox">
+               <span id="curtimetext">00:00</span> / <span id="durtimetext">00:00</span>
+            </div>
+            <button id="mutebtn"></button>
+            <input id="volumeslider" type="range" min="0" max="100" value="100" step="1">
+         </div>
       </div>
-      <button id="mutebtn"></button>
-      <input id="volumeslider" type="range" min="0" max="100" value="100" step="1">
-
+      <div id="playlist">
+         <select  id="myList" size="19">
+            <option value="0">song1</option>
+            <option value="1">song2</option>
+            <option value="song3">song3</option>
+            <option value="song4">song4</option>
+            <option value="song5">song5</option>
+            <option value="song6">song6</option>
+            <option value="song7">song7</option>
+            <option value="song8">song8</option>
+            <option value="song9">song9</option>
+            <option value="song10">song10</option>
+            <option value="song11">song11</option>
+            <option value="song12">song12</option>
+            <option value="song13">song13</option>
+            <option value="song14">song14</option>
+            <option value="song15">song15</option>
+            <option value="song16">song16</option>
+            <option value="song17">song17</option>
+            <option value="song18">song18</option>
+            <option value="song19">song19</option>
+         </select>
+      </div>
+      <div id="display-wrapper">
+         <div id="display">
+            <p id="playlist_status"></p>
+         </div>
+      </div>
    </div>
 </body>
 </html>
